Added open-source code link to my GitHub link

--- a/src/styles.css
+++ b/src/styles.css
@@ -36,3 +36,10 @@
 #celsius-link {
   text-decoration: none;
 }
+
+#github {
+  display: block;
+  text-align: center;
+  padding: 10px;
+  margin-top: 10px;
+}
